<resources>
    <string name="app_name">FindMe</string>

    <!-- valeurs par defaut -->
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="validate">Valider</string>
    <string name="next_step">Suivant</string>

    <!-- create account fragment -->
    <string name="fragment_create_account_title_textview">Création de votre profil</string>
    <string name="fragment_create_account_name_edittext">Pseudo</string>

    <!-- create avatar fragment -->
    <string name="fragment_create_avatar_title_textview">Choisissez votre avatar</string>

    <!-- layout searching-->
    <string name="find_guy">Vous cherchez</string>

    <!-- list messages -->
    <string name="fragment_list_messages_toolbar_title">Vos Messages </string>
    <string name="fragment_messages_toolbar_title">Guillaume</string>

    <!-- Play Fragment -->
    <string name="fragment_play_find_btn">Trouver ! </string>

    <!-- popup find-->
    <string name="popup_not_find_title">Oups !! Vous vous êtes trompé de personne.</string>
    <string name="popup_find_title">Félicitation !!\n Vous pouvez maintenant chatter tous les 2.</string>
    <string name="popup_find_chat_btn">Commencer à discuter !</string>


</resources>
