<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_accueil">

    <TextView
        android:id="@+id/fragment_create_account_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/fdm_white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/fragment_create_account_title_textview"/>

    <EditText
        android:id="@+id/fragment_create_account_pseudo_edittext"
        android:layout_below="@+id/fragment_create_account_title_textview"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:background="@drawable/shape_spiner_background"
        android:hint="@string/fragment_create_account_name_edittext"
        android:textColor="@color/fdm_white"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/fragment_create_account_sex_layout"
        android:layout_below="@+id/fragment_create_account_pseudo_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fragment_create_account_woman_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="@drawable/shape_spiner_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/fragment_create_account_woman_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_woman"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/fragment_create_account_woman_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/fdm_white"
                android:text="@string/woman"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_create_account_man_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="@drawable/shape_spiner_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/fragment_create_account_man_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_man"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/fragment_create_account_man_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/fdm_white"
                android:text="@string/man"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_create_account_create_account_btn"
        android:layout_below="@+id/fragment_create_account_sex_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/shape_btn_validate"
        android:text="@string/next_step"
        android:textColor="@color/fdm_white"
        android:textSize="16sp"/>

</RelativeLayout>
